--- a/lrtm/methods_law.tex
+++ b/lrtm/methods_law.tex
@@ -68,7 +68,7 @@ Y^T$. These steps cost $\calO(NK)$.
 
 Next, we need to apply column pivoted QR to \smash{$\BCbar^T$} in order to
 identify the pivots as our anchor objects $S$. By taking the QR decomposition
-$Y \Eq QR$, $Cbar^T$ can be further transformed into $QR\Ybar^T$. Notice that
+$Y \Eq QR$, $\Cbar^T$ can be further transformed into $QR\Ybar^T$. Notice that
 $\Cbar^T$ is an orthogonal embedding of $X^T = R\Ybar^T$ onto a
 higher\hyp{}dimensional space, which preserves the column $L_2$\hyp{}norms.
 \cref{lem:qrequiv} shows that column pivoted QR on $\Cbar^T$ and on $R\Ybar^T$
