--- a/notation.tex
+++ b/notation.tex
@@ -148,6 +148,7 @@
 
 % Color
 \definecolor{burgundy}{RGB}{140,0,26}
+\definecolor{lightgray}{rgb}{0.83, 0.83, 0.83}
 
 % Environment
 \newcommand{\algorithmnormal}[1]{
