--- a/preliminary.tex
+++ b/preliminary.tex
@@ -149,30 +149,30 @@ tridiagonal. The final approximation is $f(A) \approx Z_Mf(\Gamma_M)Z_M^T$.
 
 Both methods we introduce here have clear advantages and drawbacks. The
 Chebyshev expansion method has strong theoretical guarantees on the convergence
-rate for $f$ with some degree of smoothness over the spectrum of $A$. For
-irregular $f$, it may take extremely large number of moments to resolve possible
-discontinuities, thus suffering in either efficiency or approximation quality.
-On the other hand, GQL is well suited for matrices with a few distinct
-eigenvalues, which allows the Lanczos algorithm to converge quickly. However, it
-requires extra computation to ensure numerical stability in floating point
-arithmetic. Therefore, it is crucial for us to determine the numerical
-characteristics of the matrices we are interested in, and choose the appropriate
-method for each application.
+rate for $f$ with some degree of smoothness over the spectrum of $A$. Many terms
+may be required to accurately represent less smooth functions. On the other
+hand, GQL is well suited for matrices with a few distinct eigenvalues, which
+allows the Lanczos algorithm to converge quickly. However, it requires extra
+computation to ensure numerical stability in floating point arithmetic.
+Therefore, it is crucial for us to determine the numerical characteristics of
+the matrices we are interested in, and choose the appropriate method for each
+application.
 
 \section{Stochastic Estimation}\label{pre:ste}
 
-Stochastic estimation is one of the key tools in this dissertation. Given a
-linear operator $A\in\BBR^{N\Times N}$, often in implicit form, it helps us to
+Along with approximation of matrix functions, stochastic estimation is
+one of the key tools in this dissertation. Given a linear operator $A\in\BBR^
+{N\Times N}$, often in implicit form, stochastic estimators allow us to
 efficiently extract the trace and diagonal by probing the operator with random
 vectors. 
 
 The stochastic trace estimator was first proposed by~
 \citet{hutchinson1990stochastic}, who used the technique to approximate the
 trace of the influence matrix for Laplacian smoothing splines. In his case,
-applying influence matrix $A$ to each vector requires solving an expensive
+applying influence matrix $A$ to a vector requires solving an expensive
 smoothing spline; obtaining all diagonal elements exactly --- by calculating
 $e_i^TAe_i$ for $i=1,\cdots, N$ and $e_i$ the $i$\hyp{}th column of the identity
-matrix --- had a significant cost. Instead, he applied $A$ to a set of
+matrix --- has a significant cost. Instead, Hutchinson applied $A$ to a set of
 independent probe vectors $z$ such that $z_i$'s are i.i.d. with mean $0$ and
 variance $1$. Consequently, 
 \begin{equation}\label{eq:probe_trace}
@@ -187,8 +187,7 @@ leads to minimal variance on the estimated trace.
 
 Since then, \citet{avron2011randomized} reviewed many possible choices of probes
 for \cref{eq:probe_trace,eq:probe_diag}; another common choice is vectors with
-independent standard normal entries. On the other hand,  
-\citet{bekas2007estimator} has extended the idea for diagonal estimation by
+independent standard normal entries. \citet{bekas2007estimator} extended the idea for diagonal estimation by
 observing
 \begin{equation}\label{eq:probe_diag}
 	\BBE[z\odot Az] = \diag(A)\,,
@@ -211,7 +210,7 @@ $i$\hyp{}th row of $Z$. The estimation of $A_{kk}$ is exact if $\norm{Z_
 k$.
 \end{theorem}
 
-The direct consequence of \cref{thm:exact_cond} is that we can now design a
+The direct consequence of \cref{thm:exact_cond} is that we can design a
 specific set of probe vectors to satisfy the exact condition by solving a graph
 coloring problem. Treating $A$ as the adjacency matrix of a graph, and the
 non\hyp{}zero entries as edges, a graph coloring partitions the nodes into
@@ -223,7 +222,7 @@ greedy coloring algorithm using breadth\hyp{}first\hyp{}search that can produce
 reasonable results for some applications \cite[Theorem~28.33]
 {arumugam2016handbook}.
 
-Finally, we also attempted to use control variate to improve the stochastic
+Finally, we also attempted to use a control variate to improve the stochastic
 estimation. In \cref{ch4}, where the goal is to estimate the predictive
 variance, we take the more accurate results from pivoted Cholesky approximation
 on a few data points as a control variate. Despite little reduction in variance,
@@ -241,8 +240,8 @@ A = WH\,.
 Hence, we are able to efficiently store $A$ and multiply it with a vector in
 $\calO(Nk)$ rather than $\calO(N^2)$. Furthermore, the columns of matrix $W$
 provide us useful insight about the data, since they form a basis that span the
-original columns of $A$. Low\hyp{}rank approximation is certainly one of the
-most well\hyp{}studied problems in linear algebra; and it is widely used in data
+original columns of $A$. Low\hyp{}rank approximation is one of the most 
+well\hyp{}studied problems in linear algebra, and it is widely used in data
 science and machine learning. High\hyp{}dimensional data matrices encountered in
 these fields commonly have a low numerical rank. Correspondingly, researchers
 have proposed low\hyp{}rank models for a wide variety of applications, such as
@@ -252,21 +251,21 @@ variable model produces data that can be well approximated by low\hyp{}rank
 matrices.
 
 Among the extensive literature on computing and exploiting low\hyp{}rank
-structures, there is a growing interest in interpretability. Previously, 
-low\hyp{}rank approximations have aimed to capture the information with the
-highest numerical importance, but often fail to preserve intrinsic properties of
-datasets, e.g., non\hyp{}negativity, sparsity, and convexity. Thus, many studies
-developed constrained low\hyp{}rank approximation algorithms in order to retain
-these properties, and allow us to interpret the output in a natural setting. A
-prominent example is the non\hyp{}negative matrix approximation, for which $W$
-and $H$ are required to be element\hyp{}wise non\hyp{}negative. 
+structures, there is a growing interest in interpretability. Low\hyp{}rank
+approximation via the truncated singular value decomposition optimally
+approximates the matrix, but often fails to preserve intrinsic properties of
+datasets, e.g., non\hyp{}negativity, sparsity, and convexity. Thus, many
+constrained low\hyp{}rank approximation algorithms have been developed that
+retain these properties, and allow us to interpret the output in a natural
+setting. A prominent example is the non\hyp{}negative matrix approximation, for
+which $W$ and $H$ are required to be element\hyp{}wise non\hyp{}negative. 
 \citet{lee1999learning} applied it to images of faces, and the produced factors
 can be visualized as components of facial structures. In \cref{ch5}, the topic
 model is also a non\hyp{}negative low\hyp{}rank decomposition, and we are able
 to analyze each topic as a probability distribution over words.
 
-One attractive approach towards interpretable low\hyp{}rank approximations
-enforces $W$ to consist of columns from $A$. This allows us to describe all data
+One attractive approach to interpretable low\hyp{}rank approximations
+forces $W$ to consist of columns from $A$. This allows us to describe all data
 points in terms of a small subset, maintaining the fundamental characteristics.
 The CUR matrix decomposition, a well\hyp{}known example of this type, is often
 preferred over singular value decomposition in certain applications because of
