--- a/references.bib
+++ b/references.bib
@@ -782,7 +782,7 @@
 }
 
 @book{saad1992numerical,
-  Author = {Saad, Youcef},
+  Author = {Saad, Yousef},
   Date-Added = {2017-09-18 19:58:04 +0000},
   Date-Modified = {2017-09-18 19:58:04 +0000},
   Publisher = {Manchester University Press},
